# quiero-trabajar

./: .env  .gitignore  Makefile  aerich.ini  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  schema.py  settings.toml
app/core/: settings.py
app/models/: user.py  userjob.py
app/models/schemas/: user_schema.py
app/models/validators/: validators.py
app/restapi/: api_router.py
app/restapi/routes/: users.py
migrations/: env.py
migrations/versions/: 0eb8e4f6d335_.py  38c06b372632_otra.py  3ad750094f96_.py  618b1de1cacc_prueba_final.py  670520064726_otra_prueba.py  7c5d32848273_foreign_key_correcto.py  91c4edfdb877_.py  95561ef305f8_.py  a284d6c541d5_recreate_db.py  bec5f29f3c2a_monterrey.py  c5ee80564d70_add_users_table.py  d48901a3713e_prueba_foreign.py  e91b2dc59e4e_.py  ffe2e7fe7a67_.py
src/quiero_trabajar_demo/: config.py  main.py
src/quiero_trabajar_demo/models/: __init__.py  employee.py  jobs.py  users.py
src/quiero_trabajar_demo/models/schemas/: employee.py  jobs.py  user.py
src/quiero_trabajar_demo/views/: employee.py  jobs.py  users.py
tests/: conftest.py  test_users.py
